updated html for cypress tests

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,13 @@
 <div class="container">
 
-  <header class="header" style="display: flex; align-items:center;  ">
+  <header class="header">
       <div>
         Todo Application
       </div>
   </header>
 
   <div id="toolbar">
-    <button class="btn--primary" (click)="createList()">Add List</button>
+    <button id="createList" class="btn--primary" (click)="createList()">Add List</button>
   </div>
 
   <div id="content" cdkDropListGroup>
